////////////////////// e2sm-xtdd-ies.proto //////////////////////
// Protobuf generated from /e2sm-xtdd.asn1 by asn1c-0.9.29
// E2SM-XTDD-IEs { iso(1) identified-organization(3) dod(6) internet(1) private(4) enterprise(1) oran(53148) e2(1) version2(2) e2sm(2) e2sm-XTDD-IEs(97) }

syntax = "proto3";

package e2sm_xtdd.v2;
option go_package = "e2sm_xtdd/v2/e2sm-xtdd-ies;e2smxtddiesv2";

import "validate/v1/validate.proto";
import "asn1/v1/asn1.proto";

// enumerated from e2sm-xtdd.asn1:221
enum XtddCommand {
    XTDD_COMMAND_CONTROL1 = 0;
};

// range of Integer from e2sm-xtdd.asn1:12
// {TimeStamp}
message TimeStamp {
    // @inject_tag: aper:"sizeLB:4,sizeUB:4,"
    bytes value = 1 [(validate.v1.rules).bytes = {min_len: 4, max_len: 4}, json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:16
// {CellObjectID}
message CellObjectId {
    // @inject_tag: aper:"valueLB:0,valueUB:255,"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 255}, json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:18
// {GranularityPeriod}
message GranularityPeriod {
    // @inject_tag: aper:"valueLB:1,valueUB:4294967295,"
    int64 value = 1 [(validate.v1.rules).int64 = {gte: 1, lte: 4294967295}, json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:20
// {SubscriptionID}
message SubscriptionId {
    // @inject_tag: aper:"valueLB:1,valueUB:4294967295,"
    int64 value = 1 [(validate.v1.rules).int64 = {gte: 1, lte: 4294967295}, json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:24
// {GlobalXTDDnode-ID}
message GlobalXtddnodeID {
    // @inject_tag: aper:"valueLB:1,valueUB:4294967295,"
    int64 value = 1 [(validate.v1.rules).int64 = {gte: 1, lte: 4294967295}, json_name="value"];
};

// sequence from e2sm-xtdd.asn1:29
// @inject_tag: aper:"valueExt"
// {RANfunction-Name}
message RanfunctionName {
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:150,"
    string ran_function_short_name = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="ranFunction-ShortName"];
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:1000,"
    string ran_function_e2_sm_oid = 2 [(validate.v1.rules).string = {min_len: 1, max_len: 1000}, json_name="ranFunction-E2SM-OID"];
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:150,"
    string ran_function_description = 3 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="ranFunction-Description"];
};

// constant Integer from e2sm-xtdd.asn1:42
// {-}
message MaxofUe {
    // @inject_tag: aper:"valueLB:65535,valueUB:65535,"
    int32 value = 1 [(validate.v1.rules).int32.const = 65535, json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:44
// {UEID}
message Ueid {
    // @inject_tag: aper:"valueLB:0,valueUB:4294967295,"
    int64 value = 1 [(validate.v1.rules).int64 = {gte: 0, lte: 4294967295}, json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:46
// {UETag}
message Uetag {
    // @inject_tag: aper:"sizeLB:1,sizeUB:150,"
    string value = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="value"];
};

// sequence from e2sm-xtdd.asn1:49
// @inject_tag: aper:"valueExt"
// {UEItem}
message Ueitem {
    Ueid ue_id = 1 [ json_name="ueID"];
    // @inject_tag: aper:"optional,"
    optional Uetag ue_tag = 2 [ json_name="ueTag"];
};

// sequence from e2sm-xtdd.asn1:58
// {MeasurementInfoList}
message MeasurementInfoList {
    // @inject_tag: aper:""
    repeated MeasurementInfoItem value = 1 [ json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:58
// {MeasurementInfoItem}
message MeasurementInfoItem {
    // @inject_tag: aper:"sizeLB:1,sizeUB:150,"
    string value = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="value"];
};

// sequence from e2sm-xtdd.asn1:62
// {MeasurementData}
message MeasurementData {
    // @inject_tag: aper:"valueExt,"
    repeated MeasurementRecord value = 1 [ json_name="value"];
};

// sequence from e2sm-xtdd.asn1:63
// @inject_tag: aper:"valueExt"
// {MeasurementRecord}
message MeasurementRecord {
    Ueid ue_id = 1 [ json_name="ueID"];
    Uetag ue_tag = 2 [ json_name="ueTag"];
    MeasurementRecordItemList meas_record_item_list = 3 [ json_name="measRecordItemList"];
};

// sequence from e2sm-xtdd.asn1:71
// {MeasurementRecordItemList}
message MeasurementRecordItemList {
    // @inject_tag: aper:""
    repeated MeasurementRecordItem value = 1 [ json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:71
// {MeasurementRecordItem}
message MeasurementRecordItem {
    // @inject_tag: aper:"sizeLB:1,sizeUB:150,"
    string value = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="value"];
};

// sequence from e2sm-xtdd.asn1:75
// {MeasurementInfo-Action-List}
message MeasurementInfoActionList {
    // @inject_tag: aper:"valueExt,"
    repeated MeasurementInfoActionItem value = 1 [ json_name="value"];
};

// sequence from e2sm-xtdd.asn1:76
// @inject_tag: aper:"valueExt"
// {MeasurementInfo-Action-Item}
message MeasurementInfoActionItem {
    MeasurementTypeName meas_name = 1 [ json_name="measName"];
    // @inject_tag: aper:"optional,"
    optional MeasurementTypeId meas_id = 2 [ json_name="measID"];
};

// range of Integer from e2sm-xtdd.asn1:81
// {MeasurementTypeName}
message MeasurementTypeName {
    // @inject_tag: aper:"sizeLB:1,sizeUB:150,"
    string value = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:83
// {MeasurementTypeID}
message MeasurementTypeId {
    // @inject_tag: aper:"valueExt,valueLB:1,valueUB:65535,"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 1, lte: 65535}, json_name="value"];
};

// choice from e2sm-xtdd.asn1:95
// @inject_tag: aper:"choiceExt"
// {eventDefinition-formatsE2SM-XTDD-EventTriggerDefinition}
message EventDefinitionformatsE2SmXTddEventTriggerDefinition {
    // choice from e2sm-xtdd.asn1:95
    oneof event_definition_formats_e2_sm_xtdd_event_trigger_definition {
        // @inject_tag: aper:"choiceIdx:1,valueExt,"
        E2SmXTddEventTriggerDefinitionFormat1 event_definition_format1 = 1 [ json_name="eventDefinition-Format1"];
    }
};

// sequence from e2sm-xtdd.asn1:97
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-EventTriggerDefinition}
message E2SmXTddEventTriggerDefinition {
    // @inject_tag: aper:"choiceExt,"
    EventDefinitionformatsE2SmXTddEventTriggerDefinition event_definition_formats = 1 [ json_name="eventDefinition-formats"];
};

// sequence from e2sm-xtdd.asn1:102
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-EventTriggerDefinition-Format1}
message E2SmXTddEventTriggerDefinitionFormat1 {
    // @inject_tag: aper:"valueLB:1,valueUB:4294967295,"
    int32 reporting_period = 1 [ json_name="reportingPeriod"];
};

// choice from e2sm-xtdd.asn1:113
// @inject_tag: aper:"choiceExt"
// {actionDefinition-formatsE2SM-XTDD-ActionDefinition}
message ActionDefinitionformatsE2SmXTddActionDefinition {
    // choice from e2sm-xtdd.asn1:113
    oneof action_definition_formats_e2_sm_xtdd_action_definition {
        // @inject_tag: aper:"choiceIdx:1,valueExt,"
        E2SmXTddActionDefinitionFormat1 action_definition_format1 = 1 [ json_name="actionDefinition-Format1"];
    }
};

// sequence from e2sm-xtdd.asn1:111
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-ActionDefinition}
message E2SmXTddActionDefinition {
    RicStyleType ric_style_type = 1 [ json_name="ric-Style-Type"];
    // @inject_tag: aper:"choiceExt,"
    ActionDefinitionformatsE2SmXTddActionDefinition action_definition_formats = 2 [ json_name="actionDefinition-formats"];
};

// sequence from e2sm-xtdd.asn1:120
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-ActionDefinition-Format1}
message E2SmXTddActionDefinitionFormat1 {
    CellObjectId cell_obj_id = 1 [ json_name="cellObjID"];
    MeasurementInfoList meas_info_list = 2 [ json_name="measInfoList"];
    GranularityPeriod granul_period = 3 [ json_name="granulPeriod"];
    SubscriptionId subscript_id = 4 [ json_name="subscriptID"];
};

// choice from e2sm-xtdd.asn1:133
// @inject_tag: aper:"choiceExt"
// {indicationHeader-formatsE2SM-XTDD-IndicationHeader}
message IndicationHeaderformatsE2SmXTddIndicationHeader {
    // choice from e2sm-xtdd.asn1:133
    oneof indication_header_formats_e2_sm_xtdd_indication_header {
        // @inject_tag: aper:"choiceIdx:1,valueExt,"
        E2SmXTddIndicationHeaderFormat1 indication_header_format1 = 1 [ json_name="indicationHeader-Format1"];
    }
};

// sequence from e2sm-xtdd.asn1:135
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-IndicationHeader}
message E2SmXTddIndicationHeader {
    // @inject_tag: aper:"choiceExt,"
    IndicationHeaderformatsE2SmXTddIndicationHeader indication_header_formats = 1 [ json_name="indicationHeader-formats"];
};

// sequence from e2sm-xtdd.asn1:140
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-IndicationHeader-Format1}
message E2SmXTddIndicationHeaderFormat1 {
    TimeStamp collet_start_time = 1 [ json_name="colletStartTime"];
    MeasurementInfoList meas_info_list = 2 [ json_name="measInfoList"];
    // @inject_tag: aper:"optional,sizeExt,sizeLB:0,sizeUB:15,"
    optional string file_formatversion = 3 [(validate.v1.rules).string = {min_len: 0, max_len: 15}, json_name="fileFormatversion"];
    // @inject_tag: aper:"optional,sizeExt,sizeLB:0,sizeUB:400,"
    optional string sender_name = 4 [(validate.v1.rules).string = {min_len: 0, max_len: 400}, json_name="senderName"];
    // @inject_tag: aper:"optional,"
    optional GlobalXtddnodeID xtdd_node_id = 5 [ json_name="xtddNodeID"];
};

// choice from e2sm-xtdd.asn1:154
// @inject_tag: aper:"choiceExt"
// {indicationMessage-formatsE2SM-XTDD-IndicationMessage}
message IndicationMessageformatsE2SmXTddIndicationMessage {
    // choice from e2sm-xtdd.asn1:154
    oneof indication_message_formats_e2_sm_xtdd_indication_message {
        // @inject_tag: aper:"choiceIdx:1,valueExt,"
        E2SmXTddIndicationMessageFormat1 indication_message_format1 = 1 [ json_name="indicationMessage-Format1"];
    }
};

// sequence from e2sm-xtdd.asn1:156
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-IndicationMessage}
message E2SmXTddIndicationMessage {
    // @inject_tag: aper:"choiceExt,"
    IndicationMessageformatsE2SmXTddIndicationMessage indication_message_formats = 1 [ json_name="indicationMessage-formats"];
};

// sequence from e2sm-xtdd.asn1:161
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-IndicationMessage-Format1}
message E2SmXTddIndicationMessageFormat1 {
    SubscriptionId subscript_id = 1 [ json_name="subscriptID"];
    // @inject_tag: aper:"optional,"
    optional CellObjectId cell_obj_id = 2 [ json_name="cellObjID"];
    // @inject_tag: aper:"optional,"
    optional GranularityPeriod granul_period = 3 [ json_name="granulPeriod"];
    // @inject_tag: aper:"optional,"
    optional MeasurementInfoList meas_info_list = 4 [ json_name="measInfoList"];
    MeasurementData meas_data = 5 [ json_name="measData"];
};

// sequence from e2sm-xtdd.asn1:174
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-RANfunction-Description}
message E2SmXTddRAnfunctionDescription {
    // @inject_tag: aper:"valueExt,"
    RanfunctionName ran_function_name = 1 [ json_name="ranFunction-Name"];
    // @inject_tag: aper:"optional,sizeLB:1,sizeUB:255,"
    repeated RicEventTriggerStyleItem ric_event_trigger_style_list = 2 [(validate.v1.rules).repeated = {min_items: 1, max_items: 255}, json_name="ric-EventTriggerStyle-List"];
    // @inject_tag: aper:"optional,sizeLB:1,sizeUB:255,"
    repeated RicReportStyleItem ric_report_style_list = 3 [(validate.v1.rules).repeated = {min_items: 1, max_items: 255}, json_name="ric-ReportStyle-List"];
};

// range of Integer from e2sm-xtdd.asn1:180
// {RIC-Style-Type}
message RicStyleType {
    // @inject_tag: aper:"valueExt,valueLB:0,valueUB:255,"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 255}, json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:182
// {RIC-Style-Name}
message RicStyleName {
    // @inject_tag: aper:"sizeExt,sizeLB:1,sizeUB:150,"
    string value = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="value"];
};

// range of Integer from e2sm-xtdd.asn1:184
// {RIC-Format-Type}
message RicFormatType {
    // @inject_tag: aper:"valueExt,valueLB:0,valueUB:255,"
    int32 value = 1 [(validate.v1.rules).int32 = {gte: 0, lte: 255}, json_name="value"];
};

// sequence from e2sm-xtdd.asn1:187
// @inject_tag: aper:"valueExt"
// {RIC-EventTriggerStyle-Item}
message RicEventTriggerStyleItem {
    RicStyleType ric_event_trigger_style_type = 1 [ json_name="ric-EventTriggerStyle-Type"];
    RicStyleName ric_event_trigger_style_name = 2 [ json_name="ric-EventTriggerStyle-Name"];
    RicFormatType ric_event_trigger_format_type = 3 [ json_name="ric-EventTriggerFormat-Type"];
};

// sequence from e2sm-xtdd.asn1:194
// @inject_tag: aper:"valueExt"
// {RIC-ReportStyle-Item}
message RicReportStyleItem {
    RicStyleType ric_report_style_type = 1 [ json_name="ric-ReportStyle-Type"];
    RicStyleName ric_report_style_name = 2 [ json_name="ric-ReportStyle-Name"];
    RicFormatType ric_action_format_type = 3 [ json_name="ric-ActionFormat-Type"];
    MeasurementInfoActionList meas_info_action_list = 4 [ json_name="measInfo-Action-List"];
    RicFormatType ric_indication_header_format_type = 5 [ json_name="ric-IndicationHeaderFormat-Type"];
    RicFormatType ric_indication_message_format_type = 6 [ json_name="ric-IndicationMessageFormat-Type"];
};

// sequence from e2sm-xtdd.asn1:210
// @inject_tag: aper:"choiceExt"
// {E2SM-XTDD-ControlHeader}
message E2SmXTddControlHeader {
    // choice from e2sm-xtdd.asn1:210
    oneof e2_sm_xtdd_control_header {
        // @inject_tag: aper:"choiceIdx:1,valueExt,"
        E2SmXTddControlHeaderFormat1 control_header_format1 = 1 [ json_name="controlHeader-Format1"];
    }
};

// sequence from e2sm-xtdd.asn1:216
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-ControlHeader-Format1}
message E2SmXTddControlHeaderFormat1 {
    // @inject_tag: aper:"valueExt,valueLB:0,valueUB:0,"
    XtddCommand rc_command = 1 [ json_name="rc-command"];
};

// sequence from e2sm-xtdd.asn1:230
// @inject_tag: aper:"choiceExt"
// {E2SM-XTDD-ControlMessage}
message E2SmXTddControlMessage {
    // choice from e2sm-xtdd.asn1:230
    oneof e2_sm_xtdd_control_message {
        // @inject_tag: aper:"choiceIdx:1,valueExt,"
        E2SmXTddControlMessageFormat1 control_message_format1 = 1 [ json_name="controlMessage-Format1"];
    }
};

// range of Integer from e2sm-xtdd.asn1:234
// {ControlElement}
message ControlElement {
    // @inject_tag: aper:"sizeLB:1,sizeUB:150,"
    string value = 1 [(validate.v1.rules).string = {min_len: 1, max_len: 150}, json_name="value"];
};

// sequence from e2sm-xtdd.asn1:238
// @inject_tag: aper:"valueExt"
// {E2SM-XTDD-ControlMessage-Format1}
message E2SmXTddControlMessageFormat1 {
    ControlElement ce1 = 1 [ json_name="ce1"];
    ControlElement ce2 = 2 [ json_name="ce2"];
};

